--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no,viewport-fit=cover">
     <meta name="description" content="WLS Leerstandsspülung App - Verwaltung mit Offline-Unterstützung">
     <meta name="author" content="DK Automation">
     <meta name="mobile-web-app-capable" content="yes">
